add play and pause popup video

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="controle draggable">
         <div id="cross" class="btn__close">
         </div>
-        <div class="btn__sound">
+        <div id="btn__pause" class="btn__pause">
         </div>
         <div id="btn__play" class="btn__play">
         </div>
